active post list, tag list and post details

--- a/pikabu_proj/templates/index.html
+++ b/pikabu_proj/templates/index.html
@@ -9,28 +9,16 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">pikabu</a>
+    <a class="navbar-brand" href="{% url 'post_list' %}">pikabu</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Горячее</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Лучшее</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Свежее</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Подписки</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Сообщества</a>
-        </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'tag_list_url' %}">Тэги</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
