--- a/pikabu_proj/templates/index.html
+++ b/pikabu_proj/templates/index.html
@@ -17,8 +17,15 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'tag_list_url' %}">Тэги</a>
+          <a class="nav-link" href="{% url 'tag_list_url' %}">Теги</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'create_post_url' %}">Создать пост</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'create_tag_url' %}">Создать тег</a>
+        </li>
+
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
