--- a/pikadu_proj/pikadu_app/templates/pikadu_app/enter_name.html
+++ b/pikadu_proj/pikadu_app/templates/pikadu_app/enter_name.html
@@ -9,8 +9,10 @@
 <form action="{% url 'enter_name_url' %}" method="post">
     {% csrf_token %}
     {{ form }}
+<!--    <input id="your_name" type="text" name="your-name" maxlength="7" required>-->
     <input type="submit" value="OK">
 </form>
+
 
 
 </body>
