--- a/pikadu_proj/pikadu_app/templates/pikadu_app/post_detail.html
+++ b/pikadu_proj/pikadu_app/templates/pikadu_app/post_detail.html
@@ -7,6 +7,9 @@
 
 {% block content %}
 <p>{{ post.date_published }}</p>
-<h1>{{ post.title }}</h1>
+<h5>{{ post.title }}</h5>
 <p>{{ post.body }}</p>
+<a href="{{ post.get_update_url }}" class="btn btn-primary">Редактировать</a>
+<a href="{{ post.get_delete_url }}" class="btn btn-primary">Удалить</a>
+<a href="{% url 'add_comment_url' post.slug %}" class="btn btn-primary">Добавить комментарий</a>
 {% endblock %}
