--- a/pikadu_proj/templates/index.html
+++ b/pikadu_proj/templates/index.html
@@ -34,8 +34,13 @@
     </div>
   </div>
 </nav>
-
-{% block content %}
-{% endblock %}
+<div class="container mt-5">
+        <div class="row">
+          <div class="col-6 offset-md-2">
+          {% block content %}
+          {% endblock %}
+         </div>
+    </div>
+  </div>
 </body>
 </html>
